Modify map display to possess correct zoom and visibility behavior.

--- a/Styles/compare_style.css
+++ b/Styles/compare_style.css
@@ -10,9 +10,9 @@
 }
 
 #map {
-   margin-top: 50px;
-   height: 300px;
-   width: 300px;
+   margin-top: 30px;
+   height: 400px;
+   width: 500px;
 }
 
 button,
